fix drive list on small screen -> TODO mobile styling

--- a/client/fahrtenbuch/fahrtenbuch.css
+++ b/client/fahrtenbuch/fahrtenbuch.css
@@ -83,6 +83,7 @@ h1{
     bottom: 0;
     left: 200px;
     overflow: auto;
+    margin-bottom:1em;
 }
 
 #vehicles-list-container {
